[build-system]
requires = ["setuptools >= 61", "setuptools_scm[toml] >= 6.4"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-ext"
description = "Small handy widgets for streamlit, e.g. download button which won't cause rerun, set page width"
readme = "README.md"
authors = [{ name = "John Lyu", email = "paleneutron@outlook.com" }]
keywords = ["streamlit", "widgets"]
license = { text = "MIT" }
requires-python = ">=3.8"

dynamic = ["version"]

dependencies = ["streamlit>=1.30.0", "packaging"]


[project.urls]
"Source Code" = "https://github.com/PaleNeutron/streamlit-ext"

[project.optional-dependencies]

dev = [
    "mypy",
    "flake8 >= 4.0, <5.0",
    "black >= 22.6.0",
    "isort >= 5.10.1",
    "pandas-stubs >= 1.4.3",
]

test = ["pytest >= 7.1", "pytest-cov >= 3.0.0", "pandas", "openpyxl"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.isort]
skip_gitignore = true
profile = "black"

[tool.mypy]
strict = true
disallow_untyped_calls = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "altair",
    "IPython",
    "pptx",
    "pptx.*",
    "dataframe_image",
    "psutil",
    "IPython.display",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
